Start user homepage styling

--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -530,6 +530,15 @@ h1.sign-up {
 }
 
 /***********************
+ 		User Page
+***********************/
+
+h3.text-info.thumbnail-title {
+	color:red;
+}
+
+
+/***********************
  Buttons with Glyphicon
 ***********************/
 
