--- a/motivation/app/views/users/show.html.erb
+++ b/motivation/app/views/users/show.html.erb
@@ -5,3 +5,11 @@
 <%= link_to "Your unmotivational images", user_unmotivational_images_path(:unmotivational_images) %>
 <%= current_user.admin %>
 <%= link_to "Submitted videos/images", user_submitted_motivations_path(:user_submitted_motivations) %>
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="https://www.youtube.com/watch?v=YMq4wE6KxmQ/default.jpg" alt="...">
+      <h3 class="text-info thumbnail-title">Your Favorite Videos</h3>
+    </a>
+  </div>
+</div>
