--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -8,14 +8,18 @@
 				<%= f.hidden_field :video_id, value: @video.id %>
 				<%= f.hidden_field :url, value: @video.url %>
 				<%= f.hidden_field :user_id, value: @user.id %>
-				<%= f.submit "Favorite", class: "general-button favorite" %>
+				<%= f.button "Favorite", class: "general-button favorite" do %>
+			 		<span class= "glyphicon glyphicon-heart"> Make Favorite</span> 
+			 	<% end %>
 			 		 
 			<% end %>
 			<%= form_for([@user, @unmotivational_video]) do |f| %>
 				<%= f.hidden_field :video_id, value: @video.id %>
 				<%= f.hidden_field :user_id, value: @user.id %>
 				<%= f.hidden_field :url, value: @video.url %>
-				<%= f.submit "Unmotivational", class: "general-button unmotivational" %>
+				<%= f.button "Unmotivational", class: "general-button unmotivational" do %>
+					<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
+				<% end %>
 			<% end %>
 		<% else %>
 			 <%= button_to new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} do %>
