--- a/motivation/app/views/users/show.html.erb
+++ b/motivation/app/views/users/show.html.erb
@@ -1,15 +1,20 @@
 <h1>Hello, <%= current_user.email %></h1>
-<%= link_to "Your favorite videos", user_favorite_videos_path(:favorite_videos) %>
-<%= link_to "Your favorite images", user_favorite_images_path(:favorite_images) %>
+<h3 class="text-info thumbnail-title left">Your Favorite Videos</h3>
+<h3 class="text-info thumbnail-title right">Your Favorite Images</h3>
+
+<div class="row container-fluid">
+  <div class="col-xs-6 col-md-6">
+    <%= link_to image_tag(@favorite_video), user_favorite_videos_path(:favorite_videos),  class: "thumbnail user-video-resize center" %>
+      
+  </div>
+  <div class="col-xs-6 col-md-6  ">
+  	<%= link_to image_tag(@favorite_image, class: "user-image-resize center"), user_favorite_images_path(:favorite_images), class: "thumbnail" %>
+  </div>
+</div>
+
 <%= link_to "Your unmotivational videos", user_unmotivational_videos_path(:unmotivational_videos) %>
 <%= link_to "Your unmotivational images", user_unmotivational_images_path(:unmotivational_images) %>
 <%= current_user.admin %>
 <%= link_to "Submitted videos/images", user_submitted_motivations_path(:user_submitted_motivations) %>
-<div class="row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="https://www.youtube.com/watch?v=YMq4wE6KxmQ/default.jpg" alt="...">
-      <h3 class="text-info thumbnail-title">Your Favorite Videos</h3>
-    </a>
-  </div>
-</div>
+</br>
+<%= @favorites %>
