--- a/motivation/app/views/videos/random.html.erb
+++ b/motivation/app/views/videos/random.html.erb
@@ -16,7 +16,7 @@
 				<%= f.hidden_field :image_id, value: @random_video.id %>
 				<%= f.hidden_field :user_id, value: @user.id %>
 				<%= f.hidden_field :url, value: @random_video.url %>
-			<%= f.button "Unmotivational", class: "general-button" do %>
+			<%= f.button "Unmotivational", class: "general-button unmotivational" do %>
 					<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
 					<% end %>
 				<% end %>
