Style user favorite videos index page and user show page

--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -561,9 +561,17 @@ h3.text-info.thumbnail-title {
 		margin:0 auto;
 	}
 
-.thumbnail {
-	color:red;
+
+/***********************
+ 		User Video Page
+***********************/
+
+.text-center {
+	text-align:center;
+	display:block;
+	margin:0 auto;
 }
+
 /***********************
  Buttons with Glyphicon
 ***********************/
