--- a/motivation/app/views/videos/random.html.erb
+++ b/motivation/app/views/videos/random.html.erb
@@ -1,4 +1,4 @@
-<h2 class= "video_title"><%= @video_info.title%></h2>
+<h2 class= "video_title text-center"><%= @video_info.title%></h2>
 <div class="iframe"><iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @random_video.url%>" frameborder="0" allowfullscreen></iframe></div>
 
 <aside>
