--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -39,11 +39,6 @@
 			margin-left:-30px;
 		}
 
-		&.alter {
-			margin-left:88px;
-			margin-top:-15px;
-		}
-
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
@@ -62,7 +57,7 @@
 
 
 
- .videos-images-button {
+ .videos-button {
 	color: black;
 	&.blue-text {
 		color:#0e83cd;
@@ -447,8 +442,8 @@ h1.sign-up {
 .btn.btn-default.sign-in {
 	color:grey;
 	&:hover {
-		background-color:#000066;
-		border-color:#000066;
+		background-color:#6599FF;
+		border-color:#6599FF;
 		color:white;
 		-webkit-transition: all 500ms ease;
 		-moz-transition: all 500ms ease;
@@ -477,11 +472,11 @@ h1.sign-up {
   .form-control {
     color: $state-danger-text;
   }
-  }
+}
 
 
 .container-sign-in {
-	background-color:#0099CC;
+	background-color:#097054;
 	text-align:center;
 	margin:auto;
 	margin-top:70px;
@@ -496,7 +491,7 @@ h1.sign-up {
 }
 
 .container-log-in {
-	background-color:#0099CC;
+	background-color:#097054;
 	text-align:center;
 	margin:auto;
 	margin-top:50px;
@@ -540,9 +535,10 @@ h1.sign-up {
 ***********************/
 
 h3.text-info.thumbnail-title {
-	color:red;
+	color:rgb(215, 0, 0);
 	text-align:center;
 	text-decoration:none;
+	font-family: 'PT serif', serif;
 	&.left {
 		float:left;
 		margin-left:200px;
@@ -583,20 +579,46 @@ h3.text-info.thumbnail-title {
 }
 
 .danger-favorites {
-	margin-top:-15px;
-	margin-bottom:35px;
+	display:block;
+	margin-left:56.5px;
 }
 
-.caption {
-	margin-bottom:20px;
+.alter-video {
+	margin-left:80px;;
+}
+
+.video-title {
+	color:#44B3C2;
+	font-family:'PT Serif', serif;
+	display:block;
+	text-align:center;
+	font-weight:bold;
 }
 
 /***********************
     User Image Page
 ***********************/
 
+.images-index-resize {
+	max-height: 170px;
+	max-width: 170px;
+}
 
+.thumbnail:hover {
+	border: 1px solid #44B3C2;
+	background-color:#F2EDD8;
+	transition: all 1500ms;
+}
 
+.thumbnail.alter-image {
+	max-height:350px;
+	max-width:350px;
+}
+
+.grey {
+	
+
+}
 /***********************
  Buttons with Glyphicon
 ***********************/
