--- a/motivation/app/views/images/random.html.erb
+++ b/motivation/app/views/images/random.html.erb
@@ -9,16 +9,20 @@
 					<%= f.hidden_field :user_id, value: @user.id %>
 					<%= f.button "Make Favorite", class: "general-button favorite" do %>
 			 		<span class= "glyphicon glyphicon-heart"></span> Make Favorite
-			 	<% end %>
+			 		<% end %>
 				<% end %>
-				<%= form_for([@user, @unmotivational_image]) do |f| %>
-					<%= f.hidden_field :image_id, value: @random_image.id %>
-					<%= f.hidden_field :user_id, value: @user.id %>
-					<%= f.hidden_field :url, value: @random_image.url %>
-				<%= f.button "Unmotivational", class: "general-button unmotivational" do %>
-					<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
+				<h4 class="total-favorites-text"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @image_count %></h4>
+				<div class="make-unmotivational-button">	
+					<%= form_for([@user, @unmotivational_image]) do |f| %>
+						<%= f.hidden_field :image_id, value: @random_image.id %>
+						<%= f.hidden_field :user_id, value: @user.id %>
+						<%= f.hidden_field :url, value: @random_image.url %>
+					<%= f.button "Unmotivational", class: "general-button unmotivational" do %>
+							<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
+						<% end %>
 					<% end %>
-				<% end %>
+				</div>
+			<h4 class="total-unmotivational-text"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
 			<% else %>
 				<%= button_to new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} do %>
 			 		<span class= "glyphicon glyphicon-heart"></span> Make Favorite
