--- a/motivation/app/views/images/show.html.erb
+++ b/motivation/app/views/images/show.html.erb
@@ -11,6 +11,8 @@
 			 		<span class= "glyphicon glyphicon-heart"></span> Make Favorite
 			 		<% end %>
 				<% end %>
+				<h4 class="total-favorites-text"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @image_count %></h4>
+			<div class="make-unmotivational-button">	
 				<%= form_for([@user, @unmotivational_image]) do |f| %>
 					<%= f.hidden_field :image_id, value: @image.id %>
 					<%= f.hidden_field :user_id, value: @user.id %>
@@ -19,6 +21,8 @@
 					<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
 					<% end %>
 				<% end %>
+			</div>
+			<h4 class="total-unmotivational-text"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
 			<% else %>
 				<%= button_to new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} do %>
 			 		<span class= "glyphicon glyphicon-heart"></span> Make Favorite
@@ -26,7 +30,7 @@
 				<%= button_to new_user_path, method: :get, class: "general-button unmotivational", params: {unmotivational_sign_in: true} do %>
 					<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
 				<% end %>
-			<% end %>
+		<% end %>
 	</aside>
 	</div>
 <div class= "container-image-show-buttons">
