--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -10,18 +10,21 @@
 				<%= f.hidden_field :user_id, value: @user.id %>
 				<%= f.button "Favorite", class: "general-button favorite" do %>
 			 		<span class= "glyphicon glyphicon-heart"> Make Favorite</span> 
-			 	<% end %>
-			 		 
+			 	<% end %>		 		 
 			<% end %>
+			<h4 class="total-favorites-text-videos"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
+			<div class="make-unmotivational-button">
 			<%= form_for([@user, @unmotivational_video]) do |f| %>
 				<%= f.hidden_field :video_id, value: @video.id %>
 				<%= f.hidden_field :user_id, value: @user.id %>
 				<%= f.hidden_field :url, value: @video.url %>
 				<%= f.button "Unmotivational", class: "general-button unmotivational" do %>
 					<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
+					<% end %>
 				<% end %>
-			<% end %>
-		<% else %>
+			</div>
+			<h4 class="total-favorites-text-videos"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
+			<% else %>
 			 <%= button_to new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} do %>
 			 		<span class= "glyphicon glyphicon-heart"> Make Favorite</span> 
 			 	<% end %>
