--- a/motivation/app/views/images/random.html.erb
+++ b/motivation/app/views/images/random.html.erb
@@ -27,17 +27,21 @@
 				<%= button_to new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} do %>
 			 		<span class= "glyphicon glyphicon-heart"></span> Make Favorite
 			 	<% end %>
-				<%= button_to new_user_path, method: :get, class: "general-button unmotivational", params: {unmotivational_sign_in: true} do %>
+			<h4 class="total-favorites-text"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @image_count %></h4>
+			<div class="make-unmotivational-button">
+			<%= button_to new_user_path, method: :get, class: "general-button unmotivational", params: {unmotivational_sign_in: true} do %>
 					<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
 				<% end %>
+			<h4 class="total-unmotivational-text"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
 			<% end %>
-	</aside>
+		</div>
+		</aside>
 	</div>
 <div class= "container-image-show-buttons">
-		<%= button_to image_categories_path, method: :get, class: "general-button before-navigation left" do %>
-				<span class="glyphicon glyphicon-arrow-left"></span> Back to Images 
-			<% end %>
-		<%= button_to @path, method: :get, class: "general-button before-navigation right", params: {type: @random_video_or_image} do %>
+	<%= button_to image_categories_path, method: :get, class: "general-button before-navigation left" do %>
+			<span class="glyphicon glyphicon-arrow-left"></span> Back to Images 
+		<% end %>
+	<%= button_to @path, method: :get, class: "general-button before-navigation right", params: {type: @random_video_or_image} do %>
 				Give Me More Random Motivation <span class="glyphicon glyphicon-arrow-right"></span> 
-			<% end %>
+		<% end %>
 </div>
