--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -14,24 +14,28 @@
 			<% end %>
 			<h4 class="total-favorites-text-videos"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
 			<div class="make-unmotivational-button">
-			<%= form_for([@user, @unmotivational_video]) do |f| %>
-				<%= f.hidden_field :video_id, value: @video.id %>
-				<%= f.hidden_field :user_id, value: @user.id %>
-				<%= f.hidden_field :url, value: @video.url %>
-				<%= f.button "Unmotivational", class: "general-button unmotivational" do %>
-					<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
+				<%= form_for([@user, @unmotivational_video]) do |f| %>
+					<%= f.hidden_field :video_id, value: @video.id %>
+					<%= f.hidden_field :user_id, value: @user.id %>
+					<%= f.hidden_field :url, value: @video.url %>
+					<%= f.button "Unmotivational", class: "general-button unmotivational" do %>
+						<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
+						<% end %>
 					<% end %>
-				<% end %>
-			</div>
+				</div>
 			<h4 class="total-favorites-text-videos"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
 			<% else %>
 			 <%= button_to new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} do %>
 			 		<span class= "glyphicon glyphicon-heart"> Make Favorite</span> 
 			 	<% end %>
-			<%= button_to  new_user_path, method: :get, class: "general-button unmotivational", params: {unmotivational_sign_in: true} do %>
-					<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
-				<% end %>
-		<% end %>
+			<h4 class="total-favorites-text-videos"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
+			<div class="make-unmotivational-button">
+				<%= button_to  new_user_path, method: :get, class: "general-button unmotivational", params: {unmotivational_sign_in: true} do %>
+						<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
+					<% end %>
+				<h4 class="total-favorites-text-videos"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
+			<% end %>
+		</div>
 	</div>
 </aside>
 	<div class= "video-show-navigation-buttons">
